--- a/src/index.html
+++ b/src/index.html
@@ -14,5 +14,23 @@
 <body>
   <div id="root"></div>
   <script src="/Index.jsx"></script>
+
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.14.0/firebase-app.js"></script>
+  <script>
+    // Your web app's Firebase configuration
+    const firebaseConfig = {
+      apiKey: "***REMOVED***",
+      authDomain: "***REMOVED***",
+      databaseURL: "***REMOVED***",
+      projectId: "ptrchoi-portfolio",
+      storageBucket: "***REMOVED***",
+      messagingSenderId: "***REMOVED***",
+      appId: "1:***REMOVED***:web:***REMOVED***",
+      measurementId: "***REMOVED***"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
